:speech_balloon: added: meta description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/icons/favicon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Windows 11</title>
+    <title>Windows 11 in Preact</title>
+    <meta
+      name="description"
+      content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
+    />
   </head>
   <body>
     <div id="root"></div>
