--- a/index.html
+++ b/index.html
@@ -7,24 +7,54 @@
       type="image/svg+xml"
       href="/src/assets/icons/favicon.svg"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <!-- Primary Meta Tags -->
     <title>Windows 11 in Preact</title>
+    <meta name="title" content="Windows 11 Web" />
     <meta
       name="description"
       content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://win11.vercel.app/" />
+    <link rel="canonical" href="https://windows-11.vercel.app/" />
+    <meta property="og:title" content="Windows 11 in Preact" />
+    <meta
+      property="og:description"
+      content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
+    />
+    <meta property="og:image" content="/assets/windows_11_web.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://win11.vercel.app/" />
+    <meta property="twitter:title" content="Windows 11 in Preact" />
+    <meta
+      property="twitter:description"
+      content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
+    />
+    <meta property="twitter:image" content="/assets/windows_11_web.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RJJLPN38T"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4RJJLPN38T"
+    ></script>
+    <script type="module">
+      if (import.meta.env.PROD) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
 
-  gtag('config', 'G-4RJJLPN38T');
-</script>
+        gtag("config", "G-4RJJLPN38T");
+      }
+    </script>
   </body>
 </html>
