:mag: updated: OG image url

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       property="og:description"
       content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
     />
-    <meta property="og:image" content="/assets/windows_11_web.png" />
+    <meta
+      property="og:image"
+      content="https://win11.vercel.app/assets/windows_11_web.png"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -35,7 +38,10 @@
       property="twitter:description"
       content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
     />
-    <meta property="twitter:image" content="/assets/windows_11_web.png" />
+    <meta
+      property="twitter:image"
+      content="https://win11.vercel.app/assets/windows_11_web.png"
+    />
   </head>
   <body>
     <div id="root"></div>
