added: google verification code
To study the traffic we get from google.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <!-- Primary Meta Tags -->
+
     <title>Windows 11 in Preact</title>
     <meta name="title" content="Windows 11 Web" />
     <meta
       name="description"
       content="Awe-amazing Windows 11 clone. Oh wait, Not for your Computer, but for the web! ⚡"
     />
+
+    <!-- To study traffic data -->
+    <meta name="google-site-verification" content="%VERIF_CODE%" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
