fix: google verifcation env tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- To study traffic data -->
-    <meta name="google-site-verification" content="%VERIF_CODE%" />
+    <meta name="google-site-verification" content=%VITE_VERIF_CODE% />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
